--- a/index.html
+++ b/index.html
@@ -1,37 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Age calculator app</title>
 
+  <title>Frontend Mentor | Age calculator app</title>
+  <link rel="stylesheet" href="./styles.css">
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
   </style>
 </head>
+
 <body>
-
-  Day
-  DD
-
-  Month
-  MM
-
-  Year
-  YYYY
-
-  -- years
-  -- months
-  -- days
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+  <div class="card">
+    <form action="#" novalidate>
+      <fieldset class="form_group">
+        <label for="day">Day</label>
+        <input  type="text" id="day" name="day" placeholder="DD">
+        <span class="error">Must be a valid day</span>
+      </fieldset>
+      <fieldset class="form_group">
+        <label for="month">Month</label>
+        <input type="text" id="month" name="month" placeholder="MM">
+        <span class="error">Must be a valid day</span>
+      </fieldset>
+      <fieldset class="form_group">
+        <label for="year">Year</label>
+        <input type="text" id="year" name="year" placeholder="YYYY">
+        <span class="error">Must be a valid day</span>
+      </fieldset>
+      <button type="submit"> <i></i></button>
+    </form>
+    <h2><span class="year">- -</span> years</h2>
+    <h2><span class="month">- -</span> months</h2>
+    <h2><span class="day">- - </span> days</h2>
   </div>
+
 </body>
+<script src="./script.js"></script>
+
 </html>
